2017.10/_sources/plugins/available/quality-control/exclude-seqs.txt
exclude-seqs: Exclude sequences by alignment
============================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime quality-control exclude-seqs [OPTIONS]

     This method aligns feature sequences to a set of reference sequences to
     identify sequences that hit/miss the reference within a specified
     perc_identity, evalue, and perc_query_aligned. This method could be used
     to define a positive filter, e.g., extract only feature sequences that
     align to a certain clade of bacteria; or to define a negative filter,
     e.g., identify sequences that align to contaminant or human DNA sequences
     that should be excluded from subsequent analyses. Note that filtering is
     performed based on the perc_identity, perc_query_aligned, and evalue
     thresholds (the latter only if method==BLAST and an evalue is set). Set
     perc_identity==0 and/or perc_query_aligned==0 to disable these filtering
     thresholds as necessary.

   Options:
     --i-query-sequences PATH        Artifact: FeatureData[Sequence]  [required]
                                     Sequences to test for exclusion
     --i-reference-sequences PATH    Artifact: FeatureData[Sequence]  [required]
                                     Reference sequences to align against feature
                                     sequences
     --p-method [vsearch|blast|blastn-short]
                                     [default: blast]
                                     Alignment method to use for
                                     matching feature sequences against reference
                                     sequences
     --p-perc-identity FLOAT         [default: 0.97]
                                     Reject match if percent
                                     identity to reference is lower. Must be in
                                     range [0.0, 1.0]
     --p-evalue FLOAT                [optional]
                                     BLAST expectation (E) value
                                     threshold for saving hits. Reject if E value
                                     is higher than threshold. This threshold is
                                     disabled by default.
     --p-perc-query-aligned FLOAT    [default: 0.97]
                                     Percent of query sequence
                                     that must align to reference in order to be
                                     accepted as a hit.
     --p-threads INTEGER RANGE       [default: 1]
                                     Number of jobs to execute. Only
                                     applies to vsearch method.
     --o-sequence-hits PATH          Artifact: FeatureData[Sequence] [required if
                                     not passing --output-dir]
                                     Subset of feature
                                     sequences that align to reference sequences
     --o-sequence-misses PATH        Artifact: FeatureData[Sequence] [required if
                                     not passing --output-dir]
                                     Subset of feature
                                     sequences that do not align to reference
                                     sequences
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>Exclude sequences by alignment

   This method aligns feature sequences to a set of reference sequences to
   identify sequences that hit/miss the reference within a specified
   perc_identity, evalue, and perc_query_aligned. This method could be used to
   define a positive filter, e.g., extract only feature sequences that align
   to a certain clade of bacteria; or to define a negative filter, e.g.,
   identify sequences that align to contaminant or human DNA sequences that
   should be excluded from subsequent analyses. Note that filtering is
   performed based on the perc_identity, perc_query_aligned, and evalue
   thresholds (the latter only if method==BLAST and an evalue is set). Set
   perc_identity==0 and/or perc_query_aligned==0 to disable these filtering
   thresholds as necessary.

   Parameters
   ----------
   query_sequences : FeatureData[Sequence]
       Sequences to test for exclusion
   reference_sequences : FeatureData[Sequence]
       Reference sequences to align against feature sequences
   method : Str % Choices({'blast', 'blastn-short', 'vsearch'}), optional
       Alignment method to use for matching feature sequences against
       reference sequences
   perc_identity : Float % Range(0.0, 1.0, inclusive_end=True), optional
       Reject match if percent identity to reference is lower. Must be in
       range [0.0, 1.0]
   evalue : Float, optional
       BLAST expectation (E) value threshold for saving hits. Reject if E
       value is higher than threshold. This threshold is disabled by default.
   perc_query_aligned : Float, optional
       Percent of query sequence that must align to reference in order to be
       accepted as a hit.
   threads : Int % Range(1, None), optional
       Number of jobs to execute. Only applies to vsearch method.

   Returns
   -------
   sequence_hits : FeatureData[Sequence]
       Subset of feature sequences that align to reference sequences
   sequence_misses : FeatureData[Sequence]
       Subset of feature sequences that do not align to reference sequences</pre>
       </div>
     </div>
   </div>